--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
     "eth-lightwallet": "^3.0.1",
     "ethereumjs-abi": "^0.6.5",
     "ethereumjs-util": "^6.0.0",
+    "ethers": "^4.0.45",
     "ganache-cli": "^6.3.0",
     "random-buffer": "*",
     "run-with-testrpc": "^0.3.0",
     "solidity-coverage": "^0.4.2",
     "truffle": "^4.1.14",
-    "web3": "0.20.6"
+    "web3": "^1.2.6"
   },
   "dependencies": {
     "dotenv": "^8.0.0",
