--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "web3": "^1.2.6"
   },
   "dependencies": {
+    "@biconomy/mexa": "^1.5.13",
     "dotenv": "^8.0.0",
     "openzeppelin-solidity": "^2.0.0",
     "shelljs": "^0.8.3",
